# Grove

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/instructions/: coding-standards.md  git-workflow.md  testing.md
.claude/specs/: ARCH.md  FRD.md  PRD.md  TASKS.md
.grove-example/: DEMO.md
.grove-example/.grove/: config.yaml
.grove-example/raw/: _manifest.md  atomic-notes-principle.md  building-a-second-brain.md  digital-gardens.md  evergreen-notes.md  knowledge-compilation.md  linking-your-thinking.md  maps-of-content.md  para-method.md  progressive-summarisation.md  spaced-repetition-and-notes.md  tools-for-thought.md  zettelkasten-method.md
.grove-example/wiki/: _concepts.md  _index.md  atomic-notes-principle.md  evergreen-notes.md  maps-of-content.md  para-and-second-brain.md  progressive-summarisation.md  tools-and-digital-gardens.md  zettelkasten.md
docs/: ARCHITECTURE.md
grove/: __init__.py  cli.py
grove/compile/: engine.py  loader.py  parser.py  prompt.py  ratchet.py  writer.py
grove/config/: __init__.py  defaults.py  loader.py  state.py
grove/git/: __init__.py  auto_commit.py  diff.py  log.py  rollback.py
grove/health/: __init__.py  contradictions.py  gaps.py  models.py  orphans.py  provenance.py  reporter.py  staleness.py
grove/ingest/: __init__.py  converter.py  dedup.py  exceptions.py  html.py  manifest.py  models.py  pdf.py  quality.py  summariser.py  text.py
obsidian-plugin/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
prompts/: compile-wiki.md  contradiction.md  query.md  summarise.md
tests/: test_azure_foundry.py  test_cli.py  test_compile_engine.py  test_config.py  test_formatter.py  test_git.py  test_health.py  test_ingest.py  test_integration_compile.py  test_integration_query.py  test_llm_router.py  test_loader.py  test_manifest.py  test_openai_compat.py  test_parser.py  test_prompt.py  test_quality.py  test_query_deep.py  test_query_quick.py  test_ratchet.py  test_search.py  test_search_vec.py  test_serve.py  test_summariser.py  test_utility_commands.py  test_writer.py
(+28 files in other folders)
